# mx-ssg

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  deno.json  index.ts  package-lock.json  package.json  ssg-deno-dom-wip.ts  ssg-deno-htmlparser2.ts  ssg-node-htmlparser2.ts  workspace.code-workspace
src/: cli.rs  main.rs
templates/: ssg-deno-htmlparser2.ts
templates/src/: index.html  inner_layout.template.html  layout.template.html  scratch.html  table.template.html
tests/asdf/: asdf.html
tests/templates-reuse-slot/public/: index.html
tests/templates-reuse-slot/src/: index.html  layout.template.html
tests/templates/src/: index.html
